finish bootstrap